--- a/academy-ninja-master/ninjachallenge1.html
+++ b/academy-ninja-master/ninjachallenge1.html
@@ -4,7 +4,7 @@
         <div id='character' style='position:absolute; top:100px; left:450px; background-image: url("img/down1.png"); width:59px; height:86px;'></div>
     </div>
     <script type="text/javascript">
-	    var leftValue = 450, topValue = 100;
+	    var leftValue = 450, topValue = 100; direction='down'; step = 1;
 
     	function update(){
     		document.getElementById("character").style.left = leftValue+"px";
@@ -24,6 +24,7 @@
     		}
     		else if(e.keyCode == 38 && topValue > 0){ // UP
 				topValue = topValue - 10;
+				direction ='top';
 			}
     		update();
     	}
