commit and push

--- a/Web Fundamentals/W1D1_HTML/hello_HTML.html
+++ b/Web Fundamentals/W1D1_HTML/hello_HTML.html
@@ -1,11 +1,22 @@
 <html>
     <head>
-        <title><h1>Intro to HTML</h1></title>
+        Hello_HTML
     </head>
     <body>
-        <h2>Hello from HTML</h2>
-        <p>Hypertext Markup Language,
-             a standardized system for tagging text files to achieve font, colour,
-              graphic, and hyperlink effects on World Wide Web pages.</p>
+        <h1 style="color: red;"><strong>HTML</strong></h1>
+        <p style="color: brown;">Interested in starting your new career in tech? 
+            Learn to code at one of the top coding bootcamps.
+             Build your first website and app in a matter of weeks.</p>
+             <ul>
+                <li>Pizza 🍕</li>
+                <li>Pasta 🍜</li>
+                <li>Makloub 🥟</li>
+            </ul>
+            <ol>
+                <li>coding</li>
+                <li>Dojo</li>
+                <li>Ninjas</li>
+            </ol>
+            
     </body>
 </html>
