--- a/WebFundamentals/Week 1/Day 1/Practice/Registration form.html
+++ b/WebFundamentals/Week 1/Day 1/Practice/Registration form.html
@@ -5,10 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: blueviolet;">
     <h1>Registration Form</h1>
-    <input type="text" name="first_name">
+    <label for="first_name">first_name</label>
+    <input type="text" name="first_name :"id="first_name"><br>
+    <br>
+    <label for="last_name">last_name</label>
+    <input style="font-size: large; type="text" name="last_name :"id="last_name"><br>
+    <br>
+    <label for="Email_Address">Email_Adress</label>
+    <input style="font-size: large; type="text" name="Email_Adress :"id="Email_Adress"><br>
+    <br>
+    <label for="Password">Password</label>
+    <input style="font-size: large; type="password" name="password"id="Password"><br>
+    <br>
+    <label for=" Confirm_Password">Confirm_Password</label>
+    <input style="font-size: large; type="Confirm_password" name="Confirm_password"id="Confirm_password"><br>
+    <br>
+    <label for="Birthday :">Birthday</label>
+    <input style="font-size: large;" type="date" name="dob"><br>
+    <h3>gender identity</h3>
+    <input type="radio" name="font" value="Male" id="Male">
+    <label for="Male">Male</label>
+    <input type="radio" name="font" value="Female" id="Female">
+    <label for="Female">Female</label>
+    <input type="radio" name="font" value="Non-binary" id="Non-binary">
+    <label for="Non-binary">Non-binary</label>
+    <input type="radio" name="font" value="I prefer not to answer" id="I prefer not to answer">
+    <label for="I prefer not to answer">I prefer not to answer</label>
+    <p>A short description about myself :</p>
+    <textarea name="comment" cols="28" rows="8"></textarea>
+    <h3>Favorite language</h3>
+    <select name="snack">
+        <option value="Javascript">Javascript</option>
+        <option value="python">python</option>
+        <option value="C#">C#</option>
+        <option value="Java">Java</option>
+    </select>
+    <br>
+    <br>
+    <input type="checkbox" name="accept" id="accept">
+    <label for="accept"> Yes, I would like to receive periodic email updates</label>
+    <br>
+    <br>
+    <input type="submit" value="Create account!">
+    <p>*Indicates a required field</p>
 
-    
 </body>
 </html>
