--- a/WebFundamentals/Week 1/Day 1/Practice/Registration form.html
+++ b/WebFundamentals/Week 1/Day 1/Practice/Registration form.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body style="background-color: blueviolet;">
     <h1>Registration Form</h1>
     <label for="first_name">first_name</label>
-    <input type="text" name="first_name :"id="first_name"><br>
+    <input type="text" name="first_name :" id="first_name"><br>
     <br>
     <label for="last_name">last_name</label>
-    <input style="font-size: large; type="text" name="last_name :"id="last_name"><br>
+    <input style="font-size: large" ; type="text" name="last_name :" id="last_name"><br>
     <br>
     <label for="Email_Address">Email_Adress</label>
-    <input style="font-size: large; type="text" name="Email_Adress :"id="Email_Adress"><br>
+    <input style="font-size: large" ; type="text" name="Email_Adress :" id="Email_Adress"><br>
     <br>
     <label for="Password">Password</label>
-    <input style="font-size: large; type="password" name="password"id="Password"><br>
+    <input style="font-size: large" ; type="password" name="password" id="Password"><br>
     <br>
     <label for=" Confirm_Password">Confirm_Password</label>
-    <input style="font-size: large; type="Confirm_password" name="Confirm_password"id="Confirm_password"><br>
+    <input style="font-size: large" ; type="Confirm_password" name="Confirm_password" id="Confirm_password"><br>
     <br>
     <label for="Birthday :">Birthday</label>
     <input style="font-size: large;" type="date" name="dob"><br>
@@ -49,7 +51,7 @@
     <br>
     <br>
     <input type="submit" value="Create account!">
-    <p>*Indicates a required field</p>
-
+    <p>Indicates a required field</p>
 </body>
+
 </html>
