commit and push

--- a/WebFundamentals/Week 1/Day 1/Practice/PortfolioContent/portfoliocontent.html
+++ b/WebFundamentals/Week 1/Day 1/Practice/PortfolioContent/portfoliocontent.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>MedSouLeim</h1>
+    <img src="../Practice/358562683_1027161644841932_6968428405113517493_n.heic" alt="my image" height="100px" width="100px">
+
 </body>
 </html>
