commit and push

--- a/WebFundamentals/Week 2/Day 1/Core/buttonClicker/index.html
+++ b/WebFundamentals/Week 2/Day 1/Core/buttonClicker/index.html
@@ -1,1 +1,67 @@
-Coding Dojo Repository
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ButtonClicker</title>
+    <link rel="stylesheet" href="./style.css" />
+</head>
+<body>
+    <div class="up">
+        <div class="nav">
+            <h1 class="nav-title">Dojonary</h1>
+            <ul class="nav-links">
+                <li><input type="text" value="Search" /></li>
+                <li><button class="btn" onclick="Logout(this)">Login</button></li>
+            </ul>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <!-- left column -->
+            <div class="col-2">
+                <div class="user-card">
+                    <div class="card-body">
+                        <div class="card-body-left">
+                            <h1>ninja</h1>
+                            <h3>noun</h3>
+                            <p>Plural: ninjas</p>
+                            <button class="btn" onclick="alertThis(this)">13 Likes</button>
+                        </div>
+                        <div class="card-body-right">
+                            <p>
+                                A practitioner skilled in the <br />
+                                <a href="#">Japanese</a> art of <a href="#">ninjutsu</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="user-card">
+                    <div class="card-body">
+                        <div class="card-body-left">
+                            <h1>ninja</h1>
+                            <h3>noun</h3>
+                            <p>Plural: ninjas</p>
+                            <button class="btn">37 likes</button>
+                        </div>
+                        <div class="card-body-right">
+                            <p>
+                                A <a href="#">Programmer</a> who breaks <br />down problems
+                                with <a href="#">zen</a>-like <br />focus
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <p>Dojonary is <br />defined by <b>YOU</b></p>
+                    <button class="btn" id="defin" onclick="removeBtn(this)">Add Definition</button>
+            </div>
+        </div>
+    </div>
+</body>
+<script src="../buttonClicker/script.js"></script>
+</html>
