commit and push

--- a/Portfolio Project/Project Portfolio/index.html
+++ b/Portfolio Project/Project Portfolio/index.html
@@ -18,24 +18,24 @@
     </div>
     <div class="home-content d-flex flex-column">
         <nav class="navigation">
-            <img src="./images/ninjalogo.png" alt="">
-            <h1>Ninja Portfolio</h1>
+            <img src="./images/Trex.png" alt="">
+            <h1>Pixel Pioneers</h1>
             <div id="toggle">
                 <i class="indicator"></i>
             </div>
         </nav>
         <main>
             <div class="profiles">
-                <a href="jasser.html"><img src="./images/Jasser.jpg" alt=""></a>
-                <a href="./CV/Cv Jasser Boulila.pdf"><button class="btn btn-outline-success ">Download CV</button></a>
+                <a href="jasser.html"><img src="./images/JasserPhoto.jpg" alt=""></a>
+                <a href="./CV/Cv Jasser Boulila.pdf"><button class="btn btn-success">Download CV</button></a>
             </div>
             <div class="profiles">
-                <a href="anis.html"><img src="./images/Anis.jpg" alt=""></a>
-                <a href="./CV/CV Anis Rouis.pdf"><button class="btn btn-outline-success">Download CV</button></a>
+                <a href="anis.html"><img src="./images/AnisPhoto.jpg" alt=""></a>
+                <a href="./CV/CV Anis Rouis.pdf"><button class="btn btn-success">Download CV</button></a>
             </div>
             <div class="profiles">
-                <a href="souleim.html"><img src="./images/Soulaim.jpg" alt=""></a>
-                <a href="./CV_Souleim.pdf"><button class="btn btn-outline-success">Download CV</button></a>
+                <a href="souleim.html"><img src="./images/SouleimPhoto.jpg" alt=""></a>
+                <a href="./CV/CV Souleim.pdf"><button class="btn btn-success">Download CV</button></a>
             </div>
         </main>
         <cookies id="cookie">
