--- a/Portfolio Project/Project Portfolio/jasser.html
+++ b/Portfolio Project/Project Portfolio/jasser.html
@@ -25,7 +25,7 @@
                     <a id="left-link" href="" ><svg id="left" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-caret-left" viewBox="0 0 16 16">
                         <path d="M10 12.796V3.204L4.519 8 10 12.796zm-.659.753-5.48-4.796a1 1 0 0 1 0-1.506l5.48-4.796A1 1 0 0 1 11 3.204v9.592a1 1 0 0 1-1.659.753z"/>
                     </svg></a>
-                    <img src="./images/Jasser.jpg" alt="" class="img-fluid rounded-circle mt-5">
+                    <img src="./images/JasserPhoto.jpg" alt="" class="img-fluid rounded-circle mt-5">
                     <a id="right-link" href=""><svg id="right" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-caret-right" viewBox="0 0 16 16">
                         <path d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/>
                     </svg></a>
@@ -282,13 +282,13 @@
                     <ul class="info">
                         <li>
                             <span><img src="./images/mail.png" alt=""></span>
-                            <span>anis.rouis@esprit.tn</span>
+                            <span>bhimlol123456@gmail.com</span>
                         </li>
                     </ul>
                     <ul class="info">
                         <li>
                             <span><img src="./images/phone-call.png" alt=""></span>
-                            <span>+21692718505</span>
+                            <span>+216 51 540 339</span>
                         </li>
                     </ul>
                 </div>
