--- a/Portfolio Project/Project Portfolio/anis.html
+++ b/Portfolio Project/Project Portfolio/anis.html
@@ -27,7 +27,7 @@
                             <path
                                 d="M10 12.796V3.204L4.519 8 10 12.796zm-.659.753-5.48-4.796a1 1 0 0 1 0-1.506l5.48-4.796A1 1 0 0 1 11 3.204v9.592a1 1 0 0 1-1.659.753z" />
                         </svg></a>
-                    <img src="./images/Anis.jpg" alt="" class="img-fluid rounded-circle mt-5">
+                    <img src="./images/AnisPhoto.jpg" alt="" class="img-fluid rounded-circle mt-5">
                     <a id="right-link" href=""><svg id="right" xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                             fill="currentColor" class="bi bi-caret-right" viewBox="0 0 16 16">
                             <path
@@ -297,6 +297,7 @@
                             <div class="carousel-caption d-none d-md-block" style="color: white;font-size:x-large;">
                                 <h3>Web Fundamental :</h3>
                                 <p style="margin-left: -3%;">Technology Used : Html,Css,Js,Boostrap</p>
+                                <button type="button" class="btn btn-primary">Click Here</button>
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
