--- a/Portfolio Project/Project Portfolio/souleim.html
+++ b/Portfolio Project/Project Portfolio/souleim.html
@@ -25,7 +25,7 @@
                     <a id="left-link" href="" ><svg id="left" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-caret-left" viewBox="0 0 16 16">
                         <path d="M10 12.796V3.204L4.519 8 10 12.796zm-.659.753-5.48-4.796a1 1 0 0 1 0-1.506l5.48-4.796A1 1 0 0 1 11 3.204v9.592a1 1 0 0 1-1.659.753z"/>
                     </svg></a>
-                    <img src="./images/Soulaim.jpg" alt="" class="img-fluid rounded-circle mt-5">
+                    <img src="./images/SouleimPhoto.jpg" alt="" class="img-fluid rounded-circle mt-5">
                     <a id="right-link" href=""><svg id="right" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-caret-right" viewBox="0 0 16 16">
                         <path d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/>
                     </svg></a>
@@ -177,14 +177,14 @@
                 </div>
             </div>
             <div class="card">
-                <div class="percent" style="--clr:#04fc43 ;--num:25;">
+                <div class="percent" style="--clr:#04fc43 ;--num:30;">
                     <div class="dot"></div>
                     <svg>
                         <circle cx="70" cy="70" r="70"></circle>
                         <circle cx="70" cy="70" r="70"></circle>
                     </svg>
                     <div class="number">
-                        <h2>25<span>%</span></h2>
+                        <h2>30<span>%</span></h2>
                         <p>JavaScript</p>
                     </div>
                 </div>
@@ -256,8 +256,7 @@
                     <ul class="info">
                         <li>
                             <span><img src="./images/location.png" alt=""></span>
-                            <span>Tunisia,Nabeul, <br>
-                                Tazarka 8024</span>
+                            <span>Nabeul Tazarka 8024</span>
                         </li>
                     </ul>
                     <ul class="info">
@@ -269,7 +268,7 @@
                     <ul class="info">
                         <li>
                             <span><img src="./images/phone-call.png" alt=""></span>
-                            <span>+2162901250</span>
+                            <span>+216 29 012 504</span>
                         </li>
                     </ul>
                 </div>
